@startuml UcGoogleAuth

title Authentication — GoogleAuthUseCase

left to right direction
skinparam packageStyle rectangle
skinparam componentStyle rectangle
skinparam linetype ortho

' ── Ports OUT ─────────────────────────────────
interface "LoadUserPort"       as LOAD #A5D6A7
interface "SaveUserPort"       as SAVE #A5D6A7
interface "TokenGeneratorPort" as TOK  #A5D6A7

component [UserAggregate] as UA #FFF9C4

' ══ GoogleAuthUseCase ════════════════════════
package "GoogleAuthUseCase" #E3F2FD {
    interface "GoogleAuthPort" as P_GOO
    component [GoogleAuthUseCase] as UC_GOO
    P_GOO ..|> UC_GOO
}

UC_GOO --> LOAD : findByEmail(email)
UC_GOO --> UA   : createGoogleUser() / linkGoogleAccount()
UC_GOO --> SAVE : save(user) [solo si es nuevo]
UC_GOO --> TOK  : generateAccessToken + generateRefreshToken

note right of UC_GOO
  Flujo:
  · Email existe + googleSub coincide → login directo
  · Email existe + googleSub null → vincula sub y loguea
  · Email existe + googleSub distinto → InvalidCredentialsException
  · Email no existe → crea usuario Google (active + emailVerified = true)
end note

note right of TOK
  JwtTokenGeneratorAdapter:
  · accessToken  (15 min)
  · refreshToken (7 días)
end note

@enduml

